WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119763
[Mac] fast/dom/attr-style-too-lazy.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=119763
Summary
[Mac] fast/dom/attr-style-too-lazy.html is flaky
Alexey Proskuryakov
Reported
2013-08-13 11:19:20 PDT
I'm sometimes seeing a failure. Looks like status change leaks from a previous test. @@ -1,3 +1,5 @@ +UI DELEGATE STATUS CALLBACK: setStatusText: +UI DELEGATE STATUS CALLBACK: setStatusText: This test verifies that acquiring the 'style' attribute via a DOM Attr node still works correctly after the inline style has been modified through the CSSOM API. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
Attachments
proposed fix
(1.60 KB, patch)
2013-08-13 11:24 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
With a better ChangeLog
(1.64 KB, patch)
2013-08-13 11:35 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-08-13 11:24:48 PDT
Created
attachment 208660
[details]
proposed fix
WebKit Commit Bot
Comment 2
2013-08-13 11:27:38 PDT
Attachment 208660
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/DumpRenderTree/mac/UIDelegate.mm']" exit_code: 1 Tools/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3
2013-08-13 11:35:02 PDT
Created
attachment 208661
[details]
With a better ChangeLog
WebKit Commit Bot
Comment 4
2013-08-13 15:47:35 PDT
Comment on
attachment 208661
[details]
With a better ChangeLog Clearing flags on attachment: 208661 Committed
r154027
: <
http://trac.webkit.org/changeset/154027
>
WebKit Commit Bot
Comment 5
2013-08-13 15:47:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug