[Mac] fast/dom/attr-style-too-lazy.html is flaky https://bugs.webkit.org/show_bug.cgi?id=119763

Reviewed by Darin Adler.

* DumpRenderTree/mac/UIDelegate.mm:
(-[UIDelegate webView:setStatusText:]): Don't dump anything when not running
a test, it would just semi-randomly leak to the next one.
(-[UIDelegate webView:didPressMissingPluginButton:]): Added same check here, just
for good measure.


Canonical link: https://commits.webkit.org/137716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154027 268f45cc-cd09-0410-ab3c-d52691b4dbfc