Tools/DumpRenderTree/mac/UIDelegate.mm
@@ -197,7 +197,7 @@ DumpRenderTreeDraggingInfo *draggingInfo = nil;
 
 - (void)webView:(WebView *)sender setStatusText:(NSString *)text
 {
-    if (gTestRunner->dumpStatusCallbacks())
+    if (!done && gTestRunner->dumpStatusCallbacks())
         printf("UI DELEGATE STATUS CALLBACK: setStatusText:%s\n", [text UTF8String]);
 }
 
@@ -290,7 +290,8 @@ DumpRenderTreeDraggingInfo *draggingInfo = nil;
 
 - (BOOL)webView:(WebView *)webView didPressMissingPluginButton:(DOMElement *)element
 {
-    printf("MISSING PLUGIN BUTTON PRESSED\n");
+    if (!done)
+        printf("MISSING PLUGIN BUTTON PRESSED\n");
     return TRUE;
 }
 
